add styles and layouts

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 
         <div class="primary-content t-border"> 
             <p class="intro">Lake Baikal is the largest freshwater lake by volume in the world, containing 22–23% of the world's fresh surface water. With 23,615.39 km&sup3; of fresh water, it contains more water than the North American Great Lakes combined.</p>
-            <a class="callout" href="https://en.wikipedia.org/wiki/Lake_Baikal">Find out more </a>
+            <a class="callout" href="https://en.wikipedia.org/wiki/Lake_Baikal">Find out more</a>
         
             <div class="fauna-flora">
                 <h2>Fauna and flora</h2> 
                 <p>Lake Baikal is rich in biodiversity. It hosts more than 1,000 species of plants and 2,500 species of animals based on current knowledge, but the actual figures for both groups are believed to be significantly higher. More than 80% of the animals are endemic.</p>
             </div>
             
-            <a class="callout" href="#fauna-flora">Find out more </a>
+            <a class="callout" href="#fauna-flora">See fauna and flora</a>
         </div>
 
-        <div class="secondary-content t-border">
+        <div class="secondary-content t-border group">
 
             <div class="ecotourism"> 
                 <img src="img/ecotourism.jpg" alt="Sheet of ice">
-                <h2>Ecotourism</h2>
+                <h3>Ecotourism</h3>
                 <p>Baikal has a number of different tourist activities, depending on season. Generally Baikal has two top tourist seasons.</p>
                 <ul>
                     <li>The first season is ice season, which starts usually in mid-January and lasts till mid-April.</li>
@@ -38,7 +38,7 @@
             </div>
             <div class="environmental">
                 <img src="img/fabric.jpg" alt="Fabric on Baikal">
-                <h2>Environmental concerns</h2>
+                <h3>Environmental concerns</h3>
                 <p>Lake Baikal faces a series of detrimental phenomenon including the disappearance of the omul fish, rapid growth of putrid algae and the death of endemic species of sponges across its area.</p>
                     <ol>
                         <li>Baykalsk Pulp and Paper Mill</li>
@@ -48,12 +48,11 @@
                         <li>Other pollution sources</li>
                     </ol>
             </div>
-
         </div>
 
-    <footer>
+    <footer class="main-footer t-border">
         <p>All rights reserved to me. Yo</p>
-        <a href="#top">Back to top</a>
+        <a class="callout" href="#top">Back to top</a>
     </footer>
 
 </body>
